[tool.poetry]
name = "gartmeier-dev"
version = "0.1.0"
description = ""
authors = ["Joshua Gartmeier <joshua@gartmeier.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.1.2"
django-browser-reload = "^1.16.0"
lucide = {extras = ["django"], version = "^1.0.0"}
markdown = "^3.7"
nanoid = "^2.0.0"
python = "^3.12"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
